# cargo-hatch-templates

base/: Cargo.toml  deny.toml
server/: .editorconfig  .gitignore  Cargo.toml  Dockerfile  deny.toml
server/src/: handlers.rs  main.rs  response.rs  routes.rs  settings.rs  templates.rs
server/templates/: base.html  index.html
