[package]
name = "{{ project_name }}"
version = "0.1.0"
authors = ["{{ git_author }}"]
edition = "2018"
resolver = "2"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.43"
askama = { version = "0.10.5", default-features = false }
axum = { version = "0.2.4", features = ["http2"] }
headers = "0.3.4"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", features = ["macros", "rt", "signal", "sync"] }
toml = "0.5.8"
tower = "0.4.8"
tower-http = { version = "0.1.1", features = ["compression-gzip", "decompression-gzip", "trace"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"

[profile.release]
lto = true
