[package]
name = "{{ project_name }}"
version = "0.1.0"
authors = ["{{ git_author }}"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.51"
askama = { version = "0.11.0", default-features = false }
axum = { version = "0.4.3", features = ["http2"] }
headers = "0.3.4"
serde = { version = "1.0.132", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml = "0.5.8"
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["compression-gzip", "decompression-gzip", "trace"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"

[profile.release]
lto = true
