[package]
name = "{{ project_name }}"
version = "0.1.0"
authors = ["{{ git_author }}"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.66"
askama = { version = "0.11.1", default-features = false }
axum = { version = "0.6.0-rc.2", features = ["http2"] }
headers = "0.3.8"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync"] }
tokio-shutdown = "0.1.3"
toml = "0.5.9"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["compression-gzip", "decompression-gzip", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
unidirs = "0.1.0"

[profile.release]
lto = true
strip = true
